[package]
name = "wlcskk"
version = "0.0.1"
authors = ["Naoaki Iwakiri <naokiri@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
readme = "README.md"
keywords = ["SKK", "Wayland", "Japanese"]
categories = ["internationalization", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-client = { version = "0.29.4" }
wayland-protocols = { version = "0.29.4", default-features = false, features = ["unstable_protocols", "client"] }
zwp-virtual-keyboard = "0.2.6"
cskk = { version = "0.4.0" }
# cskk = { path = "/home/naoaki/src/cskk" }
confy = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
clap = { version = "^3.2", features = ["derive", "cargo"] }
mio = { version = "^0.8.4", features = ["os-poll", "os-ext"] }
log = { version = "^0.4.17" }
env_logger = { version = "^0.9" }
signal-hook = "^0.3.14"
signal-hook-mio = { version = "^0.2.3", features = ["support-v0_8"] }
# xkbcommon = { version = "0.5.0-beta.0", features = ["wayland"] }
xkbcommon = { version = "0.4.0", features = ["wayland"] }
